# stackinator

./: .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .mypy.ini  404.html  CLAUDE.md  LICENSE  MANIFEST.in  README.md  bootstrap.sh  compilers.md  development.md  index.html  lint  memory.md  mkdocs.yml  nohup.out  pyproject.toml  readme.md  requirements-docs.txt  requirements.txt  serve  setup.cfg  sstool  test.py  test_schemas.py  test_stackinator.py  todo.md
.github/workflows/: docs.yaml  lint.yaml  main.yaml  publish.yaml
build-caches/: index.html
building/: index.html
cluster-config/: index.html
configuring/: index.html
development/: index.html
docs/: build-cache.md  build-caches.md  building.md  cluster-config.md  configuring.md  development.doc  development.md  index.md  installing.md  interfaces.md  mirrors.md  porting.md  readme.md  recipes.md  tutorial.md
etc/: Makefile  bwrap-mutable-root.sh  cray-mpich-binary-package.py
installing/: index.html
interfaces/: index.html
lib/sstool/: __init__.py  main.py
mirrors/: index.html
old-docs/: build-cache.md
porting/: index.html
readme/: index.html
recipes/: index.html
repo/: repo.yaml
search/: search_index.json
share/cluster-config/clariden/: compilers.yaml
share/cluster-config/hohgant/: concretizer.yaml
sstool/: __init__.py  main.py  schema.py
sstool/schema/: compilers.json  config.json
stackinator/: __init__.py  builder.py  cache.py  envvars.py  main.py  metadata.py  mirror.py  plan.md  recipe.py  schema.py  spack_util.py
stackinator/cluster-config/balfrin/: packages.yaml
stackinator/cluster-config/clariden/: packages.yaml
stackinator/cluster-config/hohgant/: mirrors.yaml
stackinator/etc/: Make.inc  add-compiler-links.py  add_compiler_links.py  bwrap-mutable-root.sh  bwrap-store.sh  compiler-config.py  envvars.py  gen_packages_yaml.py  squashfs-mount-wrapper.sh
stackinator/schema/: base-uenv.json  cache.json  compilers.json  config.json  environments.json  mirror.json  modules.json
stackinator/templates/: Makefile  Makefile.compilers  Makefile.environments  Makefile.generate-config  compilers.bootstrap.spack.yaml  compilers.gcc.spack.yaml  compilers.intel-oneapi-compilers.spack.yaml  compilers.llvm.spack.yaml  environments.spack.yaml  repos.yaml  sandbox  spack.yaml  stack-debug.sh  unshare-newroot.sh
stylesheets/: extra.css
templates/: Makefile  Makefile.compilers  Makefile.compilers.jinja2  Makefile.generate-config  Makefile.generate-config.jinja2  Makefile.packages  Makefile.packages.jinja2  compilers.bootstrap.spack.yaml  compilers.gcc.spack.yaml  compilers.llvm.spack.yaml  environments.spack.yaml  make.user.jinja2  packages.spack.yaml  repos.yaml  spack.yaml.jinja2  spack.yaml.packages.jinja2
test/: test.py  test_schema.py  test_yaml.py
test/base-amdgpu/: config.yaml  packages.yaml
test/base-nvgpu/: compilers.yaml  config.yaml  packages.yaml
test/cache/: config.yaml  modules.yaml  packages.yaml
test/host-recipe/: compilers-simple.yaml  compilers.yaml  config.yaml  modules.yaml  packages.yaml
test/recipes/base-amdgpu/: environments.yaml  packages.yaml
test/recipes/base-nvgpu/: environments.yaml  packages.yaml
test/recipes/cache/: compilers.yaml  environments.yaml  packages.yaml
test/recipes/host-recipe/: compilers.yaml  environments.yaml  packages.yaml
test/recipes/unique-bootstrap/: compilers.yaml  environments.yaml  packages.yaml
test/unique-bootstrap/: '  packages.yaml
test/yaml/: compilers.defaults.yaml  compilers1.yaml  config.defaults.yaml  config.full.yaml  config1.yaml  environments.full.yaml
tutorial/: index.html
unittests/: envvars.py  setup-script-test.sh  test-envvars.sh  test_mirrors.py  test_recipe.py  test_schema.py
unittests/data/: test-gpg-priv.asc  test-gpg-pub.asc
unittests/recipes/base-amdgpu/: config.yaml
unittests/recipes/base-nvgpu/: config.yaml  environments.yaml  modules.yaml
unittests/recipes/cache/: compilers.yaml  config.yaml  environments.yaml
unittests/recipes/host-recipe/: compilers.yaml  config.yaml  environments.yaml  mirrors.yaml  modules.yaml  post-install  (+2 more)
unittests/yaml/: compilers.defaults.yaml  compilers.full.yaml  config.defaults.v2.yaml  config.defaults.yaml  config.full.yaml  environments.err-providers.yaml  environments.full.yaml
(+36 files in other folders)
