[metadata]
name = Stackinator
version = attr: stackinator.VERSION
author = Swiss National Supercomputing Center (CSCS/ETH Zurich)
description = Stackinator is a tool for building a scientific software stack from a recipe for vClusters on CSCS' Alps infrastructure
url = https://github.com/eth-cscs/stackinator
license = BSD 3-Clause
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Environment :: Console

[options]
packages = stackinator
include_package_data = True
python_requires = >=3.6
scripts = bin/stack-config
install_requires =
    Jinja2 
    jsonschema
    PyYAML 
